CSS: Fixing to alignment and sizes of the social media outbound, towards taking proper spacing inside socialSpan

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -607,9 +607,8 @@ hr{
     border: 1px solid rgba(0, 0, 0, 0.397);
     background-color: rgba(0, 170, 65, 0.301);
     background-blend-mode: soft-light;
-    column-gap: 10rem;
+    column-gap: 9rem;
     margin-top: 0rem;
-    text-align: left;
     font-size: 1rem;
     line-height: 1rem;
 }
@@ -695,16 +694,17 @@ svg{
     box-shadow: 0px 1px 3px 0px rgba(255, 146, 250, 0.418);
 }
 .socialMediaSubGrid{
-    animation: 1s;
     display:grid;
-    background-image: radial-gradient(closest-corner,rgba(255, 255, 255, 0.445), rgba(53, 7, 51, 0.425)), linear-gradient(rgb(56, 0, 78), rgba(196, 130, 212, 0.692))
-    ;
+    width: 80%;
+    background-image:
+    radial-gradient(closest-corner,rgba(255, 255, 255, 0.445), rgba(53, 7, 51, 0.425)),
+    linear-gradient(rgb(56, 0, 78), rgba(196, 130, 212, 0.692));
     box-shadow: 0px 1px 3px 1px black, 0px 0px 2px 0px rgb(71, 197, 255) inset;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 1rem;
     text-align: center;
     padding: 1rem;
-    padding-right: 10rem;
+    padding-right: 8rem;
     border: 1px rgb(146, 79, 160) solid;
     border-radius: 0.2rem;
 }
@@ -723,12 +723,13 @@ body {
 }
 .subTextBox {
     display: grid;
-    grid-template-columns: 4rem 4rem ;
+    grid-template-columns: 4rem 4rem;
     row-gap: 0.2rem;
     border-radius: 0.2rem;
     background: repeating-linear-gradient( 120deg, #ffffff25 1px, #ffffff 1px, rgb(255, 255, 255) 1px, rgba(0, 0, 0, 0.575) 1px),
     radial-gradient(circle at bottom, rgb(247, 25, 255), rgba(0, 0, 0, 0.733));
     padding: 0.8rem;
+    padding-left: 1.3rem;
     box-shadow: 0px 1px 3px 1px #ffaff459, 0px 0px 0px 3px #000000 inset;
 
 }
